--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>I can push code to github</h1>
     <h2>mama I can push code</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sunt vero consectetur, enim cum itaque ipsa ab neque velit mollitia, laborum iure minus, eligendi inventore ipsum officia tempora! Harum, quaerat labore!</p>
     
 </body>
 </html>
